# Sentinel-V

./: .gitignore  Dockerfile  How to initialize the repository  Makefile  Quick Start Commands  README.md  SECURITY.md  pyproject.toml  setup.config
.github/workflows/: test.yml
config/: sentinel.default.yaml
examples/: basic_usage.py
scripts/: deploy.sh
sentinel_v/: __init__.py  autonomous_response.py  cli.py  core.py  crypto.py  deception.py  federation.py  init.py  monitoring.py  quantum_security.py  response.py  threat_detection.py  vulnerability_mitigation.py
tests/: conftest.py  test_cli.py  test_components.py  test_core.py
warehouse-app/: README.md  whse01-inventory.jsx
warehouse-app/server/: Dockerfile  db.js  docker-compose.yml  package-lock.json  package.json  seed.json  server.js
warehouse-app/server/public/: app.js  index.html
warehouse-app/server/src/: app.jsx
warehouse-app/server/test/: api.test.js
