[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-v"
version = "1.0.0"
description = "Autonomous Cyber-Defense Framework"
readme = "README.md"
authors = [
    {name = "Sentinel-V Team", email = "contact@sentinel-v.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring"
]
keywords = ["cybersecurity", "defense", "autonomous", "threat-detection", "honeypot"]
dependencies = [
    "numpy>=1.21.0",
    "cryptography>=38.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "psutil>=5.9.0; sys_platform != 'emscripten'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
    "bandit>=1.7.0",
    "safety>=2.0",
]
cli = ["click>=8.0", "rich>=12.0"]
ml = ["scikit-learn>=1.0", "tensorflow>=2.10; platform_machine != 'arm64'"]
quantum = ["qiskit>=0.39.0"]

[project.urls]
Homepage = "https://github.com/yourusername/sentinel-v-cyber-defense"
Documentation = "https://sentinel-v.readthedocs.io"
Repository = "https://github.com/yourusername/sentinel-v-cyber-defense"
Issues = "https://github.com/yourusername/sentinel-v-cyber-defense/issues"
Changelog = "https://github.com/yourusername/sentinel-v-cyber-defense/releases"

[project.scripts]
sentinel-v = "sentinel_v.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel_v*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "performance: mark test as performance test",
    "integration: mark test as integration test",
    "slow: mark test as slow running",
]
